# music-intelligence-platform

./: .env.example  .gitignore  Dockerfile  Dockerfile.portfolio  Makefile  README.md  deploy.sh  docker-compose.yml  index.html  package.json  pyproject.toml  start-api.sh
configs/: config.yaml  logging.yaml
data/sample/: artists.csv  listens.csv  tracks.csv  users.csv
demo-app/: index.html  package.json
demo-app/src/: main.js
docker/: portfolio-nginx.conf
docs/: architecture.md  data_card.md  demo_script.md  evaluation.md  licensing_notes.md  model_card.md
docs/screenshots/: demo-tour.webm
frontend/: index.html  nginx.conf  package-lock.json  package.json  playwright.config.ts  vite.config.ts
frontend/e2e/: full-tour.spec.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts  endpoints.ts
frontend/src/data/: tourSteps.ts
src/api/: deps.py  main.py
src/evaluation/: evaluator.py  metrics.py  search_metrics.py
src/features/: audio_features.py  embedding_builder.py  tag_features.py
src/ingestion/: listenbainz_loader.py  msd_loader.py  musicbrainz_loader.py  sample_generator.py  taste_profile_loader.py
src/models/: als_recommender.py  base.py  content_based.py  hybrid.py  item_similarity.py  popularity.py  train_all.py
src/preprocessing/: cleaner.py  normalizer.py
src/retrieval/: bm25_index.py  build_index.py  hybrid_search.py  vector_index.py
src/utils/: config.py  db.py  logging.py  paths.py
tests/: conftest.py  test_api.py  test_ingestion.py  test_recommender.py  test_search.py  test_similarity.py
(+92 files in other folders)
