[project]
name = "music-intelligence-platform"
version = "0.1.0"
description = "Music recommendation and search platform — portfolio project"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # Data layer
    "duckdb>=1.2",
    "pandas>=2.1",
    "numpy>=1.26",
    "pyarrow>=15.0",
    "scipy>=1.11",
    # ML & Search
    "scikit-learn>=1.4",
    "rank-bm25>=0.2.2",
    "faiss-cpu>=1.7",
    "implicit>=0.7",
    "sentence-transformers>=2.7",
    # Graph
    "networkx>=3.2",
    # API
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "pydantic>=2.5",
    "pydantic-settings>=2.2",
    "httpx>=0.27",
    "python-multipart>=0.0.9",
    # Config & CLI
    "PyYAML>=6.0",
    "python-dotenv>=1.0",
    "typer>=0.12",
    # Utilities
    "tqdm>=4.66",
    "rich>=13.7",
    "faker>=24.0",
]

[tool.uv]
python-downloads = "automatic"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.9",
    "ipykernel>=6.29",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["B008", "E501"]
